// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogContent > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<div
  class="rmd-dialog__content rmd-dialog__content--padded"
  data-testid="content"
/>
`;

exports[`DialogContent > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<div
  class="rmd-dialog__content rmd-dialog__content--padded custom-class-name"
  data-testid="content"
  style="color: white;"
/>
`;

exports[`DialogContent > should support disabling padding 1`] = `
<div
  class="rmd-dialog__content rmd-dialog__content--padded"
  data-testid="content"
>
  Content
</div>
`;

exports[`DialogContent > should support disabling padding 2`] = `
<div
  class="rmd-dialog__content"
  data-testid="content"
>
  Content
</div>
`;

exports[`dialogContent class name utility > should be callable with no arguments 1`] = `"rmd-dialog__content rmd-dialog__content--padded"`;
